expenselens-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expenselens-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expenselens-microservice
  template:
    metadata:
      labels:
        app: expenselens-microservice
    spec:
      containers:
      - name: expenselens-microservice
        image: mprach/expenselens-microservice:v5
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          protocol: TCP
