expenselens-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expenselens-service
spec:
  selector:
    app: expenselens-microservice
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
